--- a/src/components/Mainpage/Pages.css
+++ b/src/components/Mainpage/Pages.css
@@ -1,13 +1,13 @@
-.article-wrapper {
+/* .article {
     width: 685px;
     height: auto;
-    }
-.article-wrapper-1 {
+    }*/
+.article1 {
     background-color: rgba(88, 160, 119, .5);
      }       
-.article-wrapper-2 {
+.article2 {
        background-color:rgba(196, 54, 106, .5);
         }
-.article-wrapper-3 {
+.article3 {
          background-color:rgba(196, 180, 255, .5);
-          }
+          } 
